# Image_Live_Stream

./: README.md  run.m  setup.m  testScript.m
matlab_udp_class/: pnet.mexmaci64  pnet.mexw64  setup_udp_toolbox.m  setup_udp_toolbox.m~
opencv_stream/stream_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  PracticalSocket.cpp  cmake_install.cmake  config.h  receiver  receiver.cpp  sender  sender.cpp
opencv_stream/stream_matlab/: ImgStream.m  ImgStream.m~  decodeUDPimg.cpp  decodeUDPimg.mexmaci64  decodeUDPimg.mexw64  receive_image.m  receive_image.m~  setup_mex.m
